fix card and animation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="card">
                 <div class="display">
-                    <p>Break into teams in any way<br>you like. There must be at least<br>two people per team.</p>
+                    <p>Break into teams in any way you like. There must be at least two people per team.</p>
                     <div class="ellipses">
                         <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
@@ -91,8 +91,8 @@
             </div>
             <div class="card">
                 <div class="display">
-                    <p>All teams receive cards with<br>AR labels (unique symbols).<br>Team members have to decide<br>who
-                        shows the images<br>and who tries to guess them.<br>Every round, you switch roles.</p>
+                    <p>All teams receive cards with AR labels (unique symbols). Team members have to decide who
+                        shows the images and who tries to guess them. Every round, you switch roles.</p>
                     <div class="ellipses">
                         <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
@@ -124,8 +124,8 @@
             </div>
             <div class="card">
                 <div class="display">
-                    <p>The player who scanned<br>the AR label has 30 seconds<br>to show the image from<br>the card to
-                        their team without<br>saying any words.
+                    <p>The player who scanned the AR label has 30 seconds to show the image from the card to
+                        their team without saying any words.
                     </p>
                     <div class="ellipses">
                         <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -190,7 +190,7 @@
             </div>
             <div class="card">
                 <div class="display">
-                    <p>If the time is up, the game<br>automatically moves to the<br>next image. The team doesn't<br>get a point.</p>
+                    <p>If the time is up, the game automatically moves to the next image. The team doesn't get a point.</p>
                     <div class="ellipses">
                         <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
@@ -222,7 +222,7 @@
             </div>
             <div class="card">
                 <div class="display">
-                    <p>If the player doesn't know how<br>to show the image, they can tap<br>the "cross" button to move<br>to the next one. In this case,<br>the team doesn't get a point.</p>
+                    <p>If the player doesn't know how to show the image, they can tap the "cross" button to move to the next one. In this case, the team doesn't get a point.</p>
                     <div class="ellipses">
                         <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
@@ -289,7 +289,7 @@
 
         </div>
         <button class="btn_next" onclick="nextCard()">next</button>
-        <button class="btn_go hidden">play</button>
+        <button class="btn_go hidden" data-page-url="http://khleb.site">play</button>
     </div>
     <script src="index.js"></script>
 </body>
