--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
         </div>
         <button class="btn_next" onclick="nextCard()">next</button>
-        <button class="btn_go hidden" data-page-url="http://khleb.site">play</button>
+        <button class="btn_go hidden" data-page-url="https://www.google.ru">play</button>
     </div>
     <script src="index.js"></script>
 </body>
