--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="portrait">
 
         <div class="swipper">
-            <div class="card active">
+            <div class="card active top">
                 <div class="display">
                     <p>Hi there! You're now the proud owner of a tech game that features augmented reality. Let's look
                         at how it works.</p>
