--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="portrait">
 
         <div class="swipper">
-            <div class="card active top">
+            <div class="card active" style="z-index: 8;">
                 <div class="display">
                     <p>Hi there! You're now the proud owner of a tech game that features augmented reality. Let's look
                         at how it works.</p>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="z-index: 7;">
                 <div class="display">
                     <p>Break into teams in any way you like. There must be at least two people per team.</p>
                     <div class="ellipses">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="z-index: 6;">
                 <div class="display">
                     <p>All teams receive cards with AR labels (unique symbols). Team members have to decide who
                         shows the images and who tries to guess them. Every round, you switch roles.</p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="z-index: 5;">
                 <div class="display">
                     <p>The player who scanned the AR label has 30 seconds to show the image from the card to
                         their team without saying any words.
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="z-index: 4;">
                 <div class="display">
                     <p>If the team guesses the image,<br>they earn 1 point.</p>
                     <div class="ellipses">
@@ -188,7 +188,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="z-index: 3;">
                 <div class="display">
                     <p>If the time is up, the game automatically moves to the next image. The team doesn't get a point.</p>
                     <div class="ellipses">
@@ -220,7 +220,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="z-index: 2;">
                 <div class="display">
                     <p>If the player doesn't know how to show the image, they can tap the "cross" button to move to the next one. In this case, the team doesn't get a point.</p>
                     <div class="ellipses">
@@ -252,7 +252,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="z-index: 1;">
                 <div class="display">
                     <p>The winner is the team that guesses the most images.</p>
                     <div class="ellipses">
