--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <p>Hi there! You're now the proud owner of a tech game that features augmented reality. Let's
                             look
                             at how it works.</p>
-                            <img style="width: 115%;" class="img_card" src="img/img_cards/card1.png" alt="1 card">
+                            <img style="width: 115%;" class="img_card" src="img/img_cards/card1.gif" alt="1 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +70,7 @@
                 <div class="card" style="z-index: 7;">
                     <div class="display">
                         <p>Break into teams in any way you like. There must be at least two people per team.</p>
-                        <img class="img_card" src="img/img_cards/card2.png" alt="2 card">
+                        <img class="img_card" src="img/img_cards/card2.gif" alt="2 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -112,7 +112,7 @@
                     <div class="display">
                         <p>All teams receive cards with AR labels (unique symbols). Team members have to decide who
                             shows the images and who tries to guess them. Every round, you switch roles.</p>
-                            <img class="img_card" src="img/img_cards/card3.png" alt="3 card">
+                            <img class="img_card" src="img/img_cards/card3.gif" alt="3 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -155,7 +155,7 @@
                         <p>The player who scanned the AR label has 30 seconds to show the image from the card to
                             their team without saying any words.
                         </p>
-                        <img class="img_card" src="img/img_cards/card4.png" alt="4 card">
+                        <img class="img_card" src="img/img_cards/card4.gif" alt="4 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -196,7 +196,7 @@
                 <div class="card" style="z-index: 4;">
                     <div class="display">
                         <p>If the team guesses the image,<br>they earn 1 point.</p>
-                        <img class="img_card" src="img/img_cards/card5.png" alt="5 card">
+                        <img class="img_card" src="img/img_cards/card5.gif" alt="5 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -238,7 +238,7 @@
                     <div class="display">
                         <p>If the time is up, the game automatically moves to the next image. The team doesn't get a
                             point.</p>
-                            <img class="img_card" src="img/img_cards/card6.png" alt="6 card">
+                            <img  style="width: 115%;" class="img_card" src="img/img_cards/card6.gif" alt="6 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -280,7 +280,7 @@
                     <div class="display">
                         <p>If the player doesn't know how to show the image, they can tap the "cross" button to move to
                             the next one. In this case, the team doesn't get a point.</p>
-                            <img class="img_card" src="img/img_cards/card7.png" alt="7 card">
+                            <img class="img_card" src="img/img_cards/card7.gif" alt="7 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -321,7 +321,7 @@
                 <div class="card" style="z-index: 1;">
                     <div class="display">
                         <p>The winner is the team that guesses the most images.</p>
-                        <img class="img_card" src="img/img_cards/card8.png" alt="8 card">
+                        <img class="img_card" src="img/img_cards/card8.gif" alt="8 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
