--- a/index.html
+++ b/index.html
@@ -24,14 +24,63 @@
     <div class="portrait">
         <div class="swiper_container">
             <div class="swipper">
-                <div class="card active" style="z-index: 8;">
+                <div class="card active" style="z-index: 9;">
+                    <div class="display">
+                        <p>We recommend playing the game over Wi-Fi and making sure you have an open horizontal space in front of you.</p>
+                            <img class="img_card" src="img/img_cards/card9.gif" alt="9 card">
+                        <div class="ellipses">
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="z-index: 8;">
                     <div class="display">
                         <p>Hi there! You're now the proud owner of a tech game that features augmented reality. Let's
                             look
                             at how it works.</p>
                             <img style="width: 115%;" class="img_card" src="img/img_cards/card1.gif" alt="1 card">
                         <div class="ellipses">
+                            
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg><svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
                             </svg>
@@ -72,6 +121,10 @@
                         <p>Break into teams in any way you like. There must be at least two people per team.</p>
                         <img class="img_card" src="img/img_cards/card2.gif" alt="2 card">
                         <div class="ellipses">
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
@@ -124,6 +177,10 @@
                             </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
                             </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
@@ -157,6 +214,10 @@
                         </p>
                         <img class="img_card" src="img/img_cards/card4.gif" alt="4 card">
                         <div class="ellipses">
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
@@ -216,6 +277,10 @@
                             </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
                             </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
@@ -240,6 +305,10 @@
                             point.</p>
                             <img  style="width: 115%;" class="img_card" src="img/img_cards/card6.gif" alt="6 card">
                         <div class="ellipses">
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
@@ -308,6 +377,10 @@
                             </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
                             </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
@@ -323,6 +396,10 @@
                         <p>The winner is the team that guesses the most images.</p>
                         <img class="img_card" src="img/img_cards/card8.gif" alt="8 card">
                         <div class="ellipses">
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                            </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
