--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <audio id="music" autoplay="autoplay" loop>
+        <source src="sound/PuzzleGame.wav" type="audio/wav">
+    </audio>
+
     <div class="desktop">
         <div>
             <h1>The game can only be played on mobile phones</h1>
