--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 </div>
             </div>
         </div>
-        <button class="btn_next" onclick="nextCard()">Next</button>
+        <button class="btn_next" onclick="nextCard(),playMusic()">Next</button>
         <button class="btn_go hidden" data-page-url="https://www.google.ru">Play</button>
     </div>
     <script src="index.js"></script>
