--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="portrait">
         <div class="swiper_container">
             <div class="swipper">
-                <div class="card active" style="z-index: 9;">
+                <div class="card active" onclick="playMusic()" style="z-index: 9;">
                     <div class="display">
                         <p>We recommend playing the game over Wi-Fi and making sure you have an open horizontal space in front of you.</p>
                             <img class="img_card" src="img/img_cards/card9.gif" alt="9 card">
