--- a/index.html
+++ b/index.html
@@ -26,65 +26,66 @@
         </div>
     </div>
     <div class="portrait">
+        <div id="skip" onclick="goClicked()">SKIP</div>
         <div class="swiper_container">
             <div class="swipper">
                 <div class="card active" onclick="playMusic()" style="z-index: 9;">
+                                    <div class="display">
+                                        <p>Hi there! You're now the proud owner of a tech game that features augmented reality. Let's
+                                            look
+                                            at how it works.</p>
+                                            <img style="width: 115%;" class="img_card" src="img/img_cards/card1.gif" alt="1 card">
+                                        <div class="ellipses">
+                                            
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
+                                            </svg><svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+                                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
+                                            </svg>
+
+                                        </div>
+                                    </div>
+                </div>
+                <div class="card"  style="z-index: 8;">
                     <div class="display">
                         <p>We recommend playing the game over Wi-Fi and making sure you have an open horizontal space in front of you.</p>
                             <img class="img_card" src="img/img_cards/card9.gif" alt="9 card">
                         <div class="ellipses">
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
-                            </svg>
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
                             </svg>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg>
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg>
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg>
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg>
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg>
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg>
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="card" style="z-index: 8;">
-                    <div class="display">
-                        <p>Hi there! You're now the proud owner of a tech game that features augmented reality. Let's
-                            look
-                            at how it works.</p>
-                            <img style="width: 115%;" class="img_card" src="img/img_cards/card1.gif" alt="1 card">
-                        <div class="ellipses">
-                            
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#EBEBEB" />
-                            </svg><svg width="10" height="10" viewBox="0 0 10 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle id="Ellipse 10" cx="5" cy="5" r="5" fill="#164C93" />
                             </svg>
@@ -119,7 +120,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> 
                 <div class="card" style="z-index: 7;">
                     <div class="display">
                         <p>Break into teams in any way you like. There must be at least two people per team.</p>
@@ -442,7 +443,7 @@
                 </div>
             </div>
         </div>
-        <button class="btn_next" onclick="nextCard(),playMusic()">Next</button>
+        <button class="btn_next" onclick="nextCard(), playMusic()">Next</button>
         <button class="btn_go hidden" data-page-url="https://www.google.ru">Play</button>
     </div>
     <script src="index.js"></script>
