fix redirect and padding

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="portrait">
         <div class="swiper_container">
-            <div class="swipper">
+            <div class="swipper" style="padding-top:40px">
                 <div class="card active" style="z-index: 9;">
                     <div class="display">
                         <p>We recommend playing the game over Wi-Fi and making sure you have an open horizontal space in front of you.</p>
@@ -439,7 +439,7 @@
             </div>
         </div>
         <button class="btn_next" onclick="nextCard()">Next</button>
-        <button class="btn_go hidden" data-page-url="https://www.google.ru">Play</button>
+        <button class="btn_go hidden" data-page-url="../ARapp/index.html">Play</button>
     </div>
     <script src="index.js"></script>
 </body>
