--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
     </div>
     <div class="portrait">
-        <div id="skip" onclick="goClicked()">SKIP</div>
+        <div id="skip" onclick="goClicked()"  style="padding-top:40px">SKIP</div>
         <div class="swiper_container">
-            <div class="swipper" style="padding-top:40px">
+            <div class="swipper" style="padding-top:60px">
                 <div class="card active" onclick="playMusic()" style="z-index: 9;">
                                     <div class="display">
                                         <p>Hi there! You're now the proud owner of a tech game that features augmented reality. Let's
